--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@transit-se/sdk",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "TypeScript SDK for Swedish public transit APIs (Trafiklab, GTFS-RT). Departures, stop lookups, service alerts, vehicle positions, and more.",
   "homepage": "https://github.com/rebelliard/transit-se/tree/main/packages/sdk#transit-sesdk",
   "type": "module",
@@ -60,6 +60,8 @@
   "files": [
     "dist",
     "src",
+    "!src/**/*.test.ts",
+    "!src/__fixtures__",
     "README.md",
     "LICENSE"
   ],
